<resources>
    <string name="app_name">NCD-Merger-android</string>
    <string name="loading">loading.....</string>

    // login related strings
    <string name="logo_description">Medtronic Logo</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_place_holder">enter email</string>
    <string name="password_place_holder">enter password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="email_cannot_be_empty">Email cannot be empty.</string>
    <string name="password_cannot_be_empty">Password cannot be empty.</string>
    <string name="email_invalid">Please enter a valid email.</string>


    <string name="please_select">Please select</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pluse">Pulse (BPM)</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="age_in_years">Age (in years)</string>
    <string name="default_user_input_error">Please enter a valid input.</string>
    <string name="or">( or )</string>
    <string name="please_check_your_inputs">Please check your inputs</string>
    <string name="ic_add_medication">add</string>


</resources>