<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true"
    tools:context=".ui.onboarding.LoginActivity">

    <com.mdtlabs.ncd.ui.customviews.PrimaryScreenBackgroundConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@mipmap/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_bold"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/welcome"
                android:textColor="@color/navy_blue"
                android:textSize="@dimen/_16ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_bold"
                android:gravity="center"
                android:text="@string/login_to_your_account"
                android:textColor="@color/navy_blue"
                android:textSize="@dimen/_24ssp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_30sdp"
                android:animateLayoutChanges="true"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:text="@string/email"
                    android:textColor="@color/charcoal_grey"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/email_place_holder"
                    android:fontFamily="@font/dmsans_regular"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/navy_blue"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/tvUserEmailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:textColor="@color/a_red_error"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/dmsans_regular"
                    android:text="@string/password"
                    android:textColor="@color/charcoal_grey"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_8sdp"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/dmsans_regular"
                    android:hint="@string/password_place_holder"
                    android:inputType="textPassword"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/navy_blue"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/tvUserPasswordError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_regular"
                    android:textColor="@color/a_red_error"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxRememberMe"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/dmsans_regular"
                        android:gravity="center_vertical"
                        android:text="@string/remember_me"
                        android:textColor="@color/charcoal_grey"
                        android:textSize="@dimen/_14ssp"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/dmsans_regular"
                        android:gravity="right|end|center_vertical"
                        android:text="@string/forgot_password"
                        android:textColor="@color/cobalt_blue"
                        android:textSize="@dimen/_14ssp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_42sdp"
                    android:background="@drawable/button_cobalt_bg"
                    android:fontFamily="@font/dmsans_medium"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.mdtlabs.ncd.ui.customviews.PrimaryScreenBackgroundConstraintLayout>


</ScrollView>