<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingVertical="@dimen/_12sdp">

    <TextView
        android:id="@+id/tvDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_regular"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/dateofbirth"
        android:textColor="@color/charcoal_grey"
        android:textSize="@dimen/_14ssp"
        tools:ignore="RtlSymmetry" />


    <LinearLayout
        android:id="@+id/actualHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/etDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/_16ssp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_regular"
        android:gravity="center"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/or"
        android:textColor="@color/charcoal_grey"
        android:textSize="@dimen/_14ssp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_regular"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/age_in_years"
        android:textColor="@color/charcoal_grey"
        android:textSize="@dimen/_14ssp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAgeInYears"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_8sdp"
        android:background="@drawable/edittext_background"
        android:inputType="number"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/navy_blue"
        android:textSize="@dimen/_16ssp" />


    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_regular"
        android:textColor="@color/a_red_error"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone" />

</LinearLayout>